tests/good/interpret/009-fun.clap
val f = fun (x) => x

