tests/bad/interpret/003-too-many-arguments.clap
val x = fun (x) => x
val y = x 4 2
